// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders Select correctly 1`] = `
<Component
  className=""
  onChange={[MockFunction]}
  palette={
    Object {
      "backgroundColors": Object {
        "accountNavigation": "#FFFFFF",
        "altWhite": "#FFFFFF",
        "autosExpression": "#ffffff",
        "background": "#FAFAFA",
        "black": "#000000",
        "blue400": "#4299E1",
        "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
        "client": "#E0E0E0",
        "createNew": "#FFFFFF",
        "darkgray1": "#777777",
        "darkgray2": "#454545",
        "darkgray3": "#424242",
        "dropdown": "#FFFFFF",
        "editorElement": "#1286FA",
        "editorRepeatable": "#5C50E7",
        "editorRow": "#63B8C8",
        "error": "#FCE2E2",
        "errorIcon": "#DB1D1D",
        "gray1": "#E0E0E0",
        "gray100": "#F0F0F0",
        "gray2": "#E7E7E7",
        "grayAlpha": "rgba(0,0,0,0.17)",
        "grayAlpha100": "rgba(0,0,0,0.06)",
        "grayAlpha400": "rgba(0,0,0,0.36)",
        "green600": "#2F855A",
        "info": "#E8E6FB",
        "infoIcon": "#5548D9",
        "inverseText": "#212121",
        "medgray1": "#757575",
        "medgray2": "#888888",
        "menuDark": "#21262A",
        "menuLight": "#2E3841",
        "orange400": "#ED8936",
        "pink400": "#ED64A6",
        "primary1": "#5548D9",
        "primary2": "#212121",
        "primary3": "#00796B",
        "primary4": "#D32F2F",
        "primary5": "#f0b941",
        "purple400": "#9f7aea",
        "red400": "#f56565",
        "red600": "#C53030",
        "secondary1": "#2E7D32",
        "secondary2": "#757575",
        "secondary3": "#673AB7",
        "secondary4": "#9C27B0",
        "secondary5": "#00796B",
        "secondary6": "#ECF0FC",
        "submenu": "#FFFFFF",
        "success": "#C2F2EA",
        "successIcon": "#007E6A",
        "teal400": "#38B2AC",
        "teal500": "#02999A",
        "text": "#212121",
        "warning": "#FFE9BB",
        "warningIcon": "#B2551F",
        "white": "#FFFFFF",
      },
      "borderColors": Object {
        "accountNavigation": "#FFFFFF",
        "altWhite": "#FFFFFF",
        "autosExpression": "#ffffff",
        "background": "#FAFAFA",
        "black": "#000000",
        "blue400": "#4299E1",
        "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
        "client": "#E0E0E0",
        "createNew": "#FFFFFF",
        "darkgray1": "#777777",
        "darkgray2": "#454545",
        "darkgray3": "#424242",
        "dropdown": "#FFFFFF",
        "editorElement": "#1286FA",
        "editorRepeatable": "#5C50E7",
        "editorRow": "#63B8C8",
        "error": "#FCE2E2",
        "errorIcon": "#DB1D1D",
        "gray1": "#E0E0E0",
        "gray100": "#F0F0F0",
        "gray2": "#E7E7E7",
        "grayAlpha": "rgba(0,0,0,0.17)",
        "grayAlpha100": "rgba(0,0,0,0.06)",
        "grayAlpha400": "rgba(0,0,0,0.36)",
        "green600": "#2F855A",
        "info": "#E8E6FB",
        "infoIcon": "#5548D9",
        "inverseText": "#212121",
        "medgray1": "#757575",
        "medgray2": "#888888",
        "menuDark": "#21262A",
        "menuLight": "#2E3841",
        "orange400": "#ED8936",
        "pink400": "#ED64A6",
        "primary1": "#5548D9",
        "primary2": "#212121",
        "primary3": "#00796B",
        "primary4": "#D32F2F",
        "primary5": "#f0b941",
        "purple400": "#9f7aea",
        "red400": "#f56565",
        "red600": "#C53030",
        "secondary1": "#2E7D32",
        "secondary2": "#757575",
        "secondary3": "#673AB7",
        "secondary4": "#9C27B0",
        "secondary5": "#00796B",
        "secondary6": "#ECF0FC",
        "submenu": "#FFFFFF",
        "success": "#C2F2EA",
        "successIcon": "#007E6A",
        "teal400": "#38B2AC",
        "teal500": "#02999A",
        "text": "#212121",
        "warning": "#FFE9BB",
        "warningIcon": "#B2551F",
        "white": "#FFFFFF",
      },
      "fontColors": Object {
        "accountNavigation": "#FFFFFF",
        "altWhite": "#FFFFFF",
        "autosExpression": "#ffffff",
        "background": "#FAFAFA",
        "black": "#000000",
        "blue400": "#4299E1",
        "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
        "client": "#E0E0E0",
        "createNew": "#212121",
        "darkgray1": "#777777",
        "darkgray2": "#454545",
        "darkgray3": "#424242",
        "dropdown": "#212121",
        "editorElement": "#1286FA",
        "editorRepeatable": "#5C50E7",
        "editorRow": "#63B8C8",
        "error": "#FCE2E2",
        "errorIcon": "#DB1D1D",
        "gray1": "#E0E0E0",
        "gray100": "#F0F0F0",
        "gray2": "#E7E7E7",
        "grayAlpha": "rgba(0,0,0,0.17)",
        "grayAlpha100": "rgba(0,0,0,0.06)",
        "grayAlpha400": "rgba(0,0,0,0.36)",
        "green600": "#2F855A",
        "info": "#E8E6FB",
        "infoIcon": "#5548D9",
        "inverseText": "#212121",
        "medgray1": "#757575",
        "medgray2": "#888888",
        "menuDark": "#21262A",
        "menuLight": "#2E3841",
        "orange400": "#ED8936",
        "pink400": "#ED64A6",
        "primary1": "#5548D9",
        "primary2": "#212121",
        "primary3": "#00796B",
        "primary4": "#D32F2F",
        "primary5": "#f0b941",
        "purple400": "#9f7aea",
        "red400": "#f56565",
        "red600": "#C53030",
        "secondary1": "#2E7D32",
        "secondary2": "#757575",
        "secondary3": "#673AB7",
        "secondary4": "#9C27B0",
        "secondary5": "#00796B",
        "secondary6": "#ECF0FC",
        "submenu": "#FFFFFF",
        "success": "#C2F2EA",
        "successIcon": "#007E6A",
        "teal400": "#38B2AC",
        "teal500": "#02999A",
        "text": "#212121",
        "warning": "#FFE9BB",
        "warningIcon": "#B2551F",
        "white": "#FFFFFF",
      },
      "styles": Object {
        "buttonBorderRadius": "100px",
      },
    }
  }
  style={Object {}}
>
  <SelectContainer
    className=""
    style={Object {}}
  >
    <SelectPlaceholder
      className=""
      style={Object {}}
    >
      Select an option
    </SelectPlaceholder>
    <SelectFilter
      className=""
      style={Object {}}
    />
    <SelectIcon
      className=""
      style={Object {}}
    />
  </SelectContainer>
  <SelectOptionList
    className=""
    style={Object {}}
  >
    <SelectOption
      className=""
      style={Object {}}
      value="1"
    >
      Option 1
    </SelectOption>
    <SelectOption
      className=""
      style={Object {}}
      value="2"
    >
      Option 2
    </SelectOption>
    <SelectOption
      className=""
      style={Object {}}
      value="3"
    >
      Option 3
    </SelectOption>
    <SelectOption
      className=""
      style={Object {}}
      value="4"
    >
      Option 4
    </SelectOption>
    <SelectOption
      className=""
      style={Object {}}
      value="5"
    >
      Option 5
    </SelectOption>
  </SelectOptionList>
  <SelectOverlay
    className=""
    style={Object {}}
  />
</Component>
`;

exports[`Select should be rendered as a multi select if the selected prop is an array 1`] = `
<Component
  className=""
  dataLabel="select"
  onChange={[MockFunction]}
  palette={
    Object {
      "backgroundColors": Object {
        "accountNavigation": "#FFFFFF",
        "altWhite": "#FFFFFF",
        "autosExpression": "#ffffff",
        "background": "#FAFAFA",
        "black": "#000000",
        "blue400": "#4299E1",
        "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
        "client": "#E0E0E0",
        "createNew": "#FFFFFF",
        "darkgray1": "#777777",
        "darkgray2": "#454545",
        "darkgray3": "#424242",
        "dropdown": "#FFFFFF",
        "editorElement": "#1286FA",
        "editorRepeatable": "#5C50E7",
        "editorRow": "#63B8C8",
        "error": "#FCE2E2",
        "errorIcon": "#DB1D1D",
        "gray1": "#E0E0E0",
        "gray100": "#F0F0F0",
        "gray2": "#E7E7E7",
        "grayAlpha": "rgba(0,0,0,0.17)",
        "grayAlpha100": "rgba(0,0,0,0.06)",
        "grayAlpha400": "rgba(0,0,0,0.36)",
        "green600": "#2F855A",
        "info": "#E8E6FB",
        "infoIcon": "#5548D9",
        "inverseText": "#212121",
        "medgray1": "#757575",
        "medgray2": "#888888",
        "menuDark": "#21262A",
        "menuLight": "#2E3841",
        "orange400": "#ED8936",
        "pink400": "#ED64A6",
        "primary1": "#5548D9",
        "primary2": "#212121",
        "primary3": "#00796B",
        "primary4": "#D32F2F",
        "primary5": "#f0b941",
        "purple400": "#9f7aea",
        "red400": "#f56565",
        "red600": "#C53030",
        "secondary1": "#2E7D32",
        "secondary2": "#757575",
        "secondary3": "#673AB7",
        "secondary4": "#9C27B0",
        "secondary5": "#00796B",
        "secondary6": "#ECF0FC",
        "submenu": "#FFFFFF",
        "success": "#C2F2EA",
        "successIcon": "#007E6A",
        "teal400": "#38B2AC",
        "teal500": "#02999A",
        "text": "#212121",
        "warning": "#FFE9BB",
        "warningIcon": "#B2551F",
        "white": "#FFFFFF",
      },
      "borderColors": Object {
        "accountNavigation": "#FFFFFF",
        "altWhite": "#FFFFFF",
        "autosExpression": "#ffffff",
        "background": "#FAFAFA",
        "black": "#000000",
        "blue400": "#4299E1",
        "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
        "client": "#E0E0E0",
        "createNew": "#FFFFFF",
        "darkgray1": "#777777",
        "darkgray2": "#454545",
        "darkgray3": "#424242",
        "dropdown": "#FFFFFF",
        "editorElement": "#1286FA",
        "editorRepeatable": "#5C50E7",
        "editorRow": "#63B8C8",
        "error": "#FCE2E2",
        "errorIcon": "#DB1D1D",
        "gray1": "#E0E0E0",
        "gray100": "#F0F0F0",
        "gray2": "#E7E7E7",
        "grayAlpha": "rgba(0,0,0,0.17)",
        "grayAlpha100": "rgba(0,0,0,0.06)",
        "grayAlpha400": "rgba(0,0,0,0.36)",
        "green600": "#2F855A",
        "info": "#E8E6FB",
        "infoIcon": "#5548D9",
        "inverseText": "#212121",
        "medgray1": "#757575",
        "medgray2": "#888888",
        "menuDark": "#21262A",
        "menuLight": "#2E3841",
        "orange400": "#ED8936",
        "pink400": "#ED64A6",
        "primary1": "#5548D9",
        "primary2": "#212121",
        "primary3": "#00796B",
        "primary4": "#D32F2F",
        "primary5": "#f0b941",
        "purple400": "#9f7aea",
        "red400": "#f56565",
        "red600": "#C53030",
        "secondary1": "#2E7D32",
        "secondary2": "#757575",
        "secondary3": "#673AB7",
        "secondary4": "#9C27B0",
        "secondary5": "#00796B",
        "secondary6": "#ECF0FC",
        "submenu": "#FFFFFF",
        "success": "#C2F2EA",
        "successIcon": "#007E6A",
        "teal400": "#38B2AC",
        "teal500": "#02999A",
        "text": "#212121",
        "warning": "#FFE9BB",
        "warningIcon": "#B2551F",
        "white": "#FFFFFF",
      },
      "fontColors": Object {
        "accountNavigation": "#FFFFFF",
        "altWhite": "#FFFFFF",
        "autosExpression": "#ffffff",
        "background": "#FAFAFA",
        "black": "#000000",
        "blue400": "#4299E1",
        "checkboxUnselected": "rgba(0, 0, 0, 0.62)",
        "client": "#E0E0E0",
        "createNew": "#212121",
        "darkgray1": "#777777",
        "darkgray2": "#454545",
        "darkgray3": "#424242",
        "dropdown": "#212121",
        "editorElement": "#1286FA",
        "editorRepeatable": "#5C50E7",
        "editorRow": "#63B8C8",
        "error": "#FCE2E2",
        "errorIcon": "#DB1D1D",
        "gray1": "#E0E0E0",
        "gray100": "#F0F0F0",
        "gray2": "#E7E7E7",
        "grayAlpha": "rgba(0,0,0,0.17)",
        "grayAlpha100": "rgba(0,0,0,0.06)",
        "grayAlpha400": "rgba(0,0,0,0.36)",
        "green600": "#2F855A",
        "info": "#E8E6FB",
        "infoIcon": "#5548D9",
        "inverseText": "#212121",
        "medgray1": "#757575",
        "medgray2": "#888888",
        "menuDark": "#21262A",
        "menuLight": "#2E3841",
        "orange400": "#ED8936",
        "pink400": "#ED64A6",
        "primary1": "#5548D9",
        "primary2": "#212121",
        "primary3": "#00796B",
        "primary4": "#D32F2F",
        "primary5": "#f0b941",
        "purple400": "#9f7aea",
        "red400": "#f56565",
        "red600": "#C53030",
        "secondary1": "#2E7D32",
        "secondary2": "#757575",
        "secondary3": "#673AB7",
        "secondary4": "#9C27B0",
        "secondary5": "#00796B",
        "secondary6": "#ECF0FC",
        "submenu": "#FFFFFF",
        "success": "#C2F2EA",
        "successIcon": "#007E6A",
        "teal400": "#38B2AC",
        "teal500": "#02999A",
        "text": "#212121",
        "warning": "#FFE9BB",
        "warningIcon": "#B2551F",
        "white": "#FFFFFF",
      },
      "styles": Object {
        "buttonBorderRadius": "100px",
      },
    }
  }
  selectedValue={
    Array [
      "2",
      "4",
    ]
  }
  style={Object {}}
>
  <SelectContainer
    className=""
    style={Object {}}
  >
    <SelectPlaceholder
      className=""
      style={Object {}}
    >
      Select an option
    </SelectPlaceholder>
    <SelectFilter
      className=""
      style={Object {}}
    />
    <SelectIcon
      className=""
      style={Object {}}
    />
  </SelectContainer>
  <SelectOptionList
    className=""
    style={Object {}}
  >
    <SelectOption
      className=""
      style={Object {}}
      value="1"
    >
      Option 1
    </SelectOption>
    <SelectOption
      className=""
      style={Object {}}
      value="2"
    >
      Option 2
    </SelectOption>
    <SelectOption
      className=""
      style={Object {}}
      value="3"
    >
      Option 3
    </SelectOption>
    <SelectOption
      className=""
      style={Object {}}
      value="4"
    >
      Option 4
    </SelectOption>
    <SelectOption
      className=""
      style={Object {}}
      value="5"
    >
      Option 5
    </SelectOption>
  </SelectOptionList>
  <SelectOverlay
    className=""
    style={Object {}}
  />
</Component>
`;
